tempfile/derive_more/tests/compile_fail/debug/both_fmt_and_skip_on_field.rs
#[derive(derive_more::Debug)]
pub struct Foo {
    #[debug("Stuff({}): {}", bar)]
    #[debug(skip)]
    bar: String,
}

fn main() {}
